tests/test_files/neg/bad_flow3.s
	restrict r0 RO 				; FAIL: attempt to restrict a SealRange with a Regular permission
	halt
